<resources>
    <string name="app_name">Cassette</string>
    <string name="preference_file_key">com.sonu.android.musicplayer.qazwsxedcrfvtgb</string>

    <string name="first_run_status_pref_key">first_run_status</string>
    <string name="playlist_id_list_pref_key">playlist_id_list</string>

    <string name="music_playing_service_description">This is a music playing service</string>

    <string name="root_hint_key">root_hint</string>

    <string name="searchMenuItemTitle">Search</string>

    <string name="unexpected_error_message">Unexpected error occurred</string>

    <string name="album_transition_string">album_transition</string>
    <string name="sample_track_no">3</string>
    <string name="sample_song_title">Lose Yourself To Dance</string>
    <string name="sample_song_duration">3:56</string>
    <string name="sample_album_title">Random Access Memories</string>
    <string name="sample_artist_name">Daft Punk</string>
    <string name="sample_artist_no_tracks">3 tracks</string>
    <string name="sample_media_list_header">All Songs</string>
    <string name="sample_playlist_title">Favorites</string>
    <string name="sample_playlist_no_songs">23 Songs</string>
    <string name="shuffle_all_text">SHUFFLE ALL</string>
    <string name="app_name_spaced">C A S S E T T E</string>
    <string name="about_heading">About</string>
    <string name="about_description">A Material Designed Music Player with a Flat Vibe.</string>
    <string name="open_source_heading">Open Source</string>
    <string name="open_source_description">Cassette is an Open Source project with code available to everyone for free :)</string>
    <string name="github_heading">Github</string>
    <string name="github_link">https://github.com/amanshuraikwar/musicplayer</string>
    <string name="developer_name">Amanshu Raikwar</string>
    <string name="developer_github_link">https://github.com/amanshuraikwar</string>
    <string name="developer_note_1">Made with</string>
    <string name="developer_note_2">by an engineering undergrad.</string>
    <string name="add_songs_to_playlists_title">Add to playlists</string>
    <string name="done_btn_text">done</string>
    <string name="create_new_playlist_btn_text">new playlist</string>
    <string name="new_playlist_title">New Playlist</string>
    <string name="playlist_title_hint">Playlist title</string>
    <string name="create_playlist_btn_text">create</string>
    <string name="cancel_btn_text">cancel</string>
    <string name="search_query_hint">Search your music library</string>
    <string name="menu_item_options_title">Options</string>
    <string name="about_menu_item_title">About</string>
    <string name="instagram_heading">Instagram</string>
    <string name="instagram_description">I also click photos, if you like them hit that follow button, I\'ll really appreciate it.</string>
    <string name="instagram_link">https://instagram.com/amanshuraikwar</string>
    <string name="delete_menu_item_title">Delete</string>
    <string name="menu_item_add_to_playlist_title">Add to Playlist</string>
    <string name="music_player_title_text">Now Playing</string>
    <string name="sample_elapsed_duration">2:38</string>
    <string name="empty_duration_text">--:--</string>
    <string name="up_next_title_text">Up next</string>
    <string name="app_description">A material designed local music player.</string>
    <string name="give_permission_text">give permissions</string>
    <string name="give_permission_description">We need permission to read your local music library.</string>
    <string name="search_hint">Search your Music Library</string>
    <string name="songs_list_title">Songs</string>
    <string name="albums_list_title">Albums</string>
    <string name="artists_list_title">Artists</string>
    <string name="playlists_list_title">Playlists</string>
    <string name="developed_by_title">Developed by</string>
    <string name="ar_email">amanshuraikwar.dev@gmail.com</string>
    <string name="permissions_title">Permissions</string>
    <string name="more_action_text">MORE</string>
    <string name="menuBackString">Back</string>
</resources>
