<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/titleTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="24dp"
        android:paddingStart="24dp"
        android:paddingBottom="20dp"
        android:paddingEnd="24dp"
        android:text="@string/new_playlist_title"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textColor="@color/coal"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/titleTv"
        android:background="@color/whiteSmoke"/>

    <EditText
        android:id="@+id/playlistTitleEt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/titleTv"
        android:layout_marginTop="8dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="8dp"
        android:hint="@string/playlist_title_hint"
        android:lines="1"
        android:background="@null"
        android:padding="8dp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/playlistTitleEt"
        android:background="@color/whiteSmoke"/>

    <Button
        android:id="@+id/createBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/playlistTitleEt"
        android:layout_alignParentEnd="true"
        style="@style/Base.Widget.AppCompat.Button.Borderless"
        android:text="@string/create_playlist_btn_text"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp"/>

    <Button
        android:id="@+id/cancelBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/playlistTitleEt"
        android:layout_toStartOf="@+id/createBtn"
        style="@style/Base.Widget.AppCompat.Button.Borderless"
        android:text="@string/cancel_btn_text"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp"/>
</RelativeLayout>
