<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/titleTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="24dp"
        android:paddingStart="24dp"
        android:paddingBottom="20dp"
        android:paddingEnd="24dp"
        android:text="@string/add_songs_to_playlists_title"
        android:textAppearance="@style/titleTextStyle"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/titleTv"
        android:background="@color/lightGrey"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/itemsRv"
        android:layout_width="match_parent"
        android:layout_height="256dp"
        android:layout_below="@+id/titleTv"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/itemsRv"
        android:background="@color/lightGrey"/>

    <Button
        android:id="@+id/createNewPlaylistBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/itemsRv"
        android:layout_toStartOf="@+id/doneBtn"
        style="@style/Base.Widget.AppCompat.Button.Borderless"
        android:text="@string/create_new_playlist_btn_text"
        android:textColor="@color/colorAccent"/>

    <Button
        android:id="@+id/doneBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/itemsRv"
        android:layout_alignParentEnd="true"
        style="@style/Base.Widget.AppCompat.Button.Borderless"
        android:text="@string/done_btn_text"
        android:textColor="@color/colorAccent"/>
</RelativeLayout>

