<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/parentRl"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingStart="@dimen/home_icon_size_padding"
    android:paddingEnd="0dp"
    android:background="@color/veryWhite"
    android:foreground="?android:attr/selectableItemBackground">

    <ImageView
        android:id="@+id/iconIv"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/default_song_art"
        android:layout_marginTop="14dp"
        android:layout_marginBottom="14dp"
        android:layout_marginEnd="16dp"
        android:layout_centerVertical="true"/>

    <TextView
        android:id="@+id/extraInfoTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_toStartOf="@+id/optionsIb"
        android:textColor="#f5f5f5"
        android:textSize="45sp"
        android:textStyle="bold"
        android:layout_marginEnd="16dp"
        android:text="@string/sample_song_duration"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_toEndOf="@+id/iconIv"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="16dp"
        android:orientation="vertical"
        android:layout_toStartOf="@id/optionsIb">

        <TextView
            android:id="@+id/titleTv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:lines="1"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:text="@string/sample_song_title"/>

        <TextView
            android:id="@+id/subtitleTv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:lines="1"
            android:textColor="@color/grey"
            android:textSize="14sp"
            android:text="@string/sample_album_title"/>
    </LinearLayout>

    <ImageButton
        android:id="@+id/optionsIb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:src="@drawable/ic_more_vert_grey_24dp"
        android:padding="8dp"
        android:layout_marginEnd="16dp"
        android:background="?selectableItemBackgroundBorderless"
        android:drawSelectorOnTop="true"/>
</RelativeLayout>